fix: align fixture

--- a/src/components/leagueInfoTabs/fixture.module.css
+++ b/src/components/leagueInfoTabs/fixture.module.css
@@ -7,7 +7,12 @@
 }
 
 .team {
+  text-align: center;
+  width: 100px;
   color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .dateTime {
